[project]
name = "lazy-pony-prompter"
description = "A pony prompt helper extension for AUTOMATIC1111's Stable Diffusion Web UI and ComfyUI that utilizes the full power of your favorite booru query syntax. Currently supports [a/Derpibooru](https://derpibooru/org) and [a/E621](https://e621.net/)."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Siberpone/lazy-pony-prompter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "lazy-pony-prompter"
Icon = ""
